--- a/test/test.html
+++ b/test/test.html
@@ -6,7 +6,13 @@
 	<script type="text/javascript" src="../ghost0.0.2.js"></script>
 </head>
 <body>
-<div id="list">123</div>
+<div id="list">0</div>
+<div class="list"></div>
+<div class="list"></div>
+<div class="list"></div>
+<div class="list"></div>
+<div class="list"></div>
+<div class="list"></div>
    <script type="text/javascript">
 		Go(function(){
 			var tpl = Go.template(
@@ -22,17 +28,10 @@
 				score:"100"
 			};
 
-			Go("#list").insetHTML(tpl(data));
-			
-			var a = [1,2,3,4];
-			var b = {one:4,two:3,three:2,four:1};
-			var c = [[1],[2],[3],[4,5],[6,7,8],[9],[10]];
-				
-			var d = Go.AryReduceRight(b,function(a,b){
-				return a-b;	
-			},0);
 
-			console.log(d);
+			Go("#list").insetHTML(tpl(data));
+			Go(".list").insetHTML(tpl({ name:"FaiSco",date:"2010",score:"100"}));
+					Go("#list").rmNode();			
 		});
    </script>     
 </body>
