--- a/test/test.html
+++ b/test/test.html
@@ -9,29 +9,30 @@
 <button id="btn">Click</button>
 <div id="list">0</div>
 <div class="divblock"></div>
-<div class="divblock"></div>
-<div class="divblock"></div>
-<div class="divblock"></div>
-<div class="divblock"></div>
-<div class="divblock"></div>
    <script type="text/javascript">
 		G(function(){
-
+			//	G {{ Template }} base on Underscore Template 
+			// 	fast {{ Building }} the Template at once
+			//	you {{ need }} write word like this
 			var tplBuilding =
-		   		 ''	
+		   		''	
 				+'<ol>'
-				+'{{ data.list = data.list.split(","); }}'
-				+'{{ G.AryEach(data.list,function(item){  }}'
-				+		'<li>{{=item}}</li>'		
-				+'{{ }); }}'
-				+'</ol>'	
+				+'{{  data.list = data.list.split(","); }}'
+				+'{{  data.list = G.AryFilter(data.list,function(e){ return (/C\\+\\+/gi).test(e) });  }}'				
+				+'{{  console.log(data.list) }}'
+				+'{{  G.AryEach(data.list,function(item){  }}' 
+				+	'<li>{{= item }}</li>'	
+				+'{{  }) }}'
+				+'</ol>'
+				+'{{ G("#btn").unbind() }}'
+
 			var tpl = G.template(tplBuilding,{ variable:"data" });
 
 			G("#btn").bind("click",function(){
 				G.JSONP({
 					url		:	"http://jsfiddle.net/echo/jsonp",
 					data	:	{ list: "JavaScript,C,C++,JAVA,Dart,Lisp,PHP" },
-					success	:	function(data){ G(".divblock").insetHTML(tpl(data)) } 
+					success	:	function(data){ G("#list .divblock").insetHTML(tpl(data)) } 
 				});
 			});
 						
