--- a/test/test.html
+++ b/test/test.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Ghost Template</title>
-	<script type="text/javascript" src="../G0.0.3.js"></script>
+	<script type="text/javascript" src="../ghost0.0.3.js"></script>
 </head>
 <body>
 <button id="btn">Click</button>
 <div id="list">0</div>
 <div class="divblock"></div>
    <script type="text/javascript">
-		G(function(){
+		Go(function(){
 			//	G {{ Template }} base on Underscore Template 
 			// 	fast {{ Building }} the Template at once
 			//	you {{ need }} write word like this
@@ -18,22 +18,22 @@
 		   		''	
 				+'<ol>'
 				+'{{  data.list = data.list.split(","); }}'
-				+'{{  data.list = G.AryFilter(data.list,function(e){ return (/C\\+\\+/gi).test(e) });  }}'				
+				+'{{  data.list = Go.AryFilter(data.list,function(e){ return (/C\\+\\+/gi).test(e) });  }}'				
 				+'{{  console.log(data.list) }}'
-				+'{{  G.AryEach(data.list,function(item){  }}' 
+				+'{{  Go.AryEach(data.list,function(item){  }}' 
 				+	'<li>{{= item }}</li>'	
 				+'{{  }) }}'
 				+'</ol>'
-				+'{{ G("#btn").unbind() }}'
+				+'{{ Go("#btn").unbind() }}'
 
-			var tpl = G.template(tplBuilding,{ variable:"data" });
+			var tpl = Go.template(tplBuilding,{ variable:"data" });
 
-			G("#btn").bind("click",function(){
-				G.JSONP({
+			Go("#btn").bind("click",function(){
+				Go.JSONP({
 					url		:	"http://jsfiddle.net/echo/jsonp",
 					data	:	{ list: "JavaScript,C,C++,JAVA,Dart,Lisp,PHP" },
 					fail 	:   function(e){ alert(e); },
-					success	:	function(data){ G("#list .divblock").insetHTML(tpl(data)) } 
+					success	:	function(data){ Go("#list .divblock").insetHTML(tpl(data)) } 
 				});
 			});
 				
